--- a/WeekFlex/app/src/main/res/drawable/button_color.xml
+++ b/WeekFlex/app/src/main/res/drawable/button_color.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false">
+    <item android:state_selected="false">
         <shape>
             <solid android:color="#C4C4C4"></solid>
             <corners android:radius="150dp"></corners>
         </shape>
     </item>
 
-    <item android:state_enabled="true">
+    <item android:state_selected="true">
         <shape>
             <solid android:color="#FE8586"></solid>
             <corners android:radius="150dp"></corners>
