--- a/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
@@ -39,45 +39,46 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/chooseCategory"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="100dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tvCategory"
-            android:layout_marginLeft="220dp"
-            android:orientation="horizontal">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="5dp"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintLeft_toLeftOf="@+id/chooseCategory"
-                android:layout_marginTop="15dp"
-                app:cardCornerRadius="10dp">
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:id="@+id/categoryColor"
                     android:layout_width="20dp"
-                    android:layout_height="20dp"/>
+                    android:layout_height="20dp" />
 
             </androidx.cardview.widget.CardView>
 
-            <Button
+            <TextView
                 android:id="@+id/btn_categoryChoose"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="@+id/chooseCategory"
-                android:text=" 추가해"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
                 android:background="#ffffff"
-                android:layout_marginLeft="7dp"/>
-
+                android:text="추가해 주세요"
+                app:layout_constraintLeft_toLeftOf="@+id/chooseCategory"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -188,6 +189,7 @@
         app:layout_constraintTop_toBottomOf="@+id/timeSettingSwitch"
         app:layout_constraintLeft_toLeftOf="@+id/insertTodoName">
         <TextView
+            android:id="@+id/chooseStartTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/startTime"
@@ -195,11 +197,14 @@
             android:text="시작"
             android:textColor="#000000"
             android:layout_marginTop="15dp"/>
-        <EditText
+        <TextView
             android:id="@+id/selectStartTime"
+            android:text="  9 : 00 AM"
+            android:textColor="#BCBCBC"
             app:layout_constraintStart_toStartOf="@+id/startTime"
             app:layout_constraintTop_toTopOf="@+id/startTime"
             android:layout_marginLeft="280dp"
+            android:layout_marginTop="15dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -211,6 +216,7 @@
         app:layout_constraintTop_toBottomOf="@+id/startTime"
         app:layout_constraintLeft_toLeftOf="@+id/insertTodoName">
         <TextView
+            android:id="@+id/chooseEndTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/endTime"
@@ -218,22 +224,44 @@
             android:text="종료"
             android:textColor="#000000"
             android:layout_marginTop="15dp"/>
-        <EditText
+        <TextView
             android:id="@+id/selectEndTime"
+            android:text="21 : 00 PM"
+            android:textColor="#BCBCBC"
             app:layout_constraintStart_toStartOf="@+id/endTime"
             app:layout_constraintTop_toTopOf="@+id/endTime"
             android:layout_marginLeft="280dp"
+            android:layout_marginTop="15dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TimePicker
+        android:id="@+id/timepicker1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/endTime"
         app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
         android:timePickerMode="spinner"
         android:layout_marginTop="20dp"/>
+    <TimePicker
+        android:id="@+id/timepicker2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/endTime"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:timePickerMode="spinner"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/save_todo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="656dp"
+        android:text="저장하기"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
