--- a/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -40,17 +40,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         app:layout_constraintTop_toBottomOf="@+id/bottomCategory"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintLeft_toLeftOf="parent">
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
