--- a/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
@@ -63,12 +63,11 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"/>
-    <TextView
+    <ImageView
         android:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:textSize="60dp"
+        android:src="@drawable/blackplusbtn"
         app:layout_constraintTop_toTopOf="@id/makeRoutine_addRoutine"
         app:layout_constraintBottom_toBottomOf="@id/makeRoutine_addRoutine"
         app:layout_constraintLeft_toLeftOf="@id/makeRoutine_addRoutine"
