--- a/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
@@ -5,11 +5,144 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.CompleteMakeRoutineActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:text="루틴 만들기 끝내는 페이지"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/makeRoutine_topheader"
+        android:layout_width="match_parent"
+        android:layout_height="223dp"
+        android:background="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent">
+        <ImageView
+            android:id="@+id/back_completeRoutine"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/goback_white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="49dp"/>
+        <TextView
+            android:id="@+id/next_completeRoutine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다음"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="55dp"
+            android:textColor="@color/gray_4"/>
+        <TextView
+            android:id="@+id/routineName_completeRoutine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name of Routine"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/back_completeRoutine"
+            android:layout_marginTop="48dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="24dp"/>
+        <TextView
+            android:id="@+id/addRoutineMent_completeRoutine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/routineName_completeRoutine"
+            android:text="루틴에 추가할 할 일을 선택하세요"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="@id/routineName_completeRoutine"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="40dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/completeRoutine_categoryheader"
+        android:layout_width="match_parent"
+        android:layout_height="102dp"
+        app:layout_constraintTop_toBottomOf="@id/makeRoutine_topheader"
+        app:layout_constraintLeft_toLeftOf="parent">
+        <EditText
+            android:id="@+id/search_completeRoutine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="원하는 할 일을 찾을 수 있어요"
+            android:textSize="14sp"
+            android:paddingLeft="32dp"
+            android:paddingBottom="15dp"
+            />
+        <ImageView
+            android:id="@+id/search_img_completeRoutine"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/serach_gray"
+            app:layout_constraintTop_toTopOf="@id/search_completeRoutine"
+            app:layout_constraintLeft_toLeftOf="@id/search_completeRoutine"
+            app:layout_constraintBottom_toBottomOf="@id/search_completeRoutine"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"/>
+        <ImageView
+            android:id="@+id/deleteBtn_searchRoutine"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            app:layout_constraintTop_toTopOf="@id/search_completeRoutine"
+            app:layout_constraintBottom_toBottomOf="@id/search_completeRoutine"
+            app:layout_constraintRight_toRightOf="@id/search_completeRoutine"
+            android:src="@drawable/delete"
+            android:layout_marginBottom="9dp"
+            android:layout_marginRight="2dp"
+            android:visibility="invisible"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/search_completeRoutine"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="23dp"
+            app:layout_constraintRight_toRightOf="parent">
+            <ImageView
+                android:id="@+id/completeRoutine_categoryheader_emptybookmark"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/bookmark_empty"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="26dp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/completeRoutine_categoryList"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/completeRoutine_categoryheader_emptybookmark"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="16dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/addBtn_work_completeRoutine"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/black_circle_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <ImageView
+        android:id="@+id/addBtnImg_work_completeRoutine"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/plusbutton"
+        app:layout_constraintLeft_toLeftOf="@id/addBtn_work_completeRoutine"
+        app:layout_constraintRight_toRightOf="@id/addBtn_work_completeRoutine"
+        app:layout_constraintTop_toTopOf="@id/addBtn_work_completeRoutine"
+        app:layout_constraintBottom_toBottomOf="@id/addBtn_work_completeRoutine"
+        android:elevation="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
