--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="colorAccent">#181818</color>
     <color name="mainActLine">#e5e5e5</color>
     <color name="gray">#333333</color>
+    <color name="gray_1">#eeeeee</color>
     <color name="gray_2">#cccccc</color>
     <color name="gray_3">#a4a4a9</color>
+    <color name="gray_4">#666666</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="yellowBorder">#f9eb88</color>
