--- a/WeekFlex/app/src/main/res/values/styles.xml
+++ b/WeekFlex/app/src/main/res/values/styles.xml
@@ -6,7 +6,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
+
 
     <style name="AppBottomSheetDialogTheme"
         parent="Theme.Design.Light.BottomSheetDialog">
