--- a/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
@@ -91,16 +91,27 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/addTodoImg_todo" />
 
-        <View
-            android:id="@+id/blackOpacityView_todo"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/body_todo_routineRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.5"
-            android:background="@color/black"
-            android:visibility="invisible" />
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:itemCount="4"
+            tools:listitem="@layout/todo_routine_home_view" />
 
+
+    <View
+        android:id="@+id/blackOpacityView_todo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:alpha="0.5"
+        android:visibility="invisible"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <Button
         android:id="@+id/addBtn_todo"
         android:layout_width="60dp"
@@ -127,27 +138,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@id/addBtn_todo"
-        app:layout_constraintRight_toRightOf="@id/addBtn_todo">
-    <Button
-        android:id="@+id/addTodoBtn_todo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/black_addtodo_btn"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-    <ImageView
-        android:id="@+id/addTodoBtnImg_todo"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/plusbutton"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="@id/addTodoBtn_todo"
-        app:layout_constraintRight_toRightOf="@id/addTodoBtn_todo"
-        app:layout_constraintTop_toTopOf="@id/addTodoBtn_todo"
-        app:layout_constraintBottom_toBottomOf="@id/addTodoBtn_todo"
-        android:elevation="10dp"/>
+        app:layout_constraintRight_toRightOf="@id/addBtn_todo"
+        app:layout_constraintTop_toTopOf="@id/addBtn_todo">
+
+        <Button
+            android:id="@+id/addTodoBtn_todo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/black_addtodo_btn"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/addTodoBtnImg_todo"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:elevation="10dp"
+            android:src="@drawable/plusbutton"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/addTodoBtn_todo"
+            app:layout_constraintLeft_toLeftOf="@id/addTodoBtn_todo"
+            app:layout_constraintRight_toRightOf="@id/addTodoBtn_todo"
+            app:layout_constraintTop_toTopOf="@id/addTodoBtn_todo" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
