--- a/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
@@ -40,40 +40,55 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_addRoutine"
-        android:nestedScrollingEnabled="false"
-        android:layout_width="0dp"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ment_addRoutine2"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintTop_toBottomOf="@+id/ment_addRoutine2"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="32dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
-    <Button
-        android:id="@+id/makeRoutine_addRoutine"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:text="New Routine"
-        android:fontFamily="@font/maax"
-        android:textStyle="bold"
-        android:background="@drawable/routine_list_rectangle"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview_addRoutine"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
-    <ImageView
-        android:elevation="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/blackplusbtn"
-        app:layout_constraintTop_toTopOf="@id/makeRoutine_addRoutine"
-        app:layout_constraintBottom_toBottomOf="@id/makeRoutine_addRoutine"
-        app:layout_constraintLeft_toLeftOf="@id/makeRoutine_addRoutine"
-        android:layout_marginLeft="100dp"/>
+        app:layout_constraintVertical_bias="0"
+        >
+        <RelativeLayout
+            android:id="@+id/relative_addroutine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            >
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_addRoutine"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:nestedScrollingEnabled="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+            <Button
+                android:id="@+id/makeRoutine_addRoutine"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:text="New Routine"
+                android:textSize="20sp"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:background="@drawable/routine_list_rectangle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_below="@+id/recyclerview_addRoutine"
+                />
+            <ImageView
+                android:elevation="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/blackplusbtn"
+                android:layout_marginTop="30dp"
+                android:layout_below="@id/recyclerview_addRoutine"
+                android:layout_marginLeft="100dp"/>
+    </RelativeLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
