--- a/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
@@ -38,14 +38,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="32dp"
-            android:layout_marginLeft="21dp"
-            android:layout_marginRight="21dp"
-            android:clipToPadding="false"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:id="@+id/weekHeader_recylerview"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            android:visibility="visible"
             android:orientation="horizontal" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,14 +91,16 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/addTodoImg_todo" />
 
+        <View
+            android:id="@+id/blackOpacityView_todo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.5"
+            android:background="@color/black"
+            android:visibility="invisible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <View
-        android:id="@+id/blackOpacityView_todo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:alpha="0.5"
-        android:visibility="invisible"/>
+
     <Button
         android:id="@+id/addBtn_todo"
         android:layout_width="60dp"
